--- a/styles/home.scss
+++ b/styles/home.scss
@@ -1,6 +1,5 @@
 @import "./variables.module.scss";
 @import "./card.module.scss";
-@import "./createJobModal.scss";
 
 .form-group {
   margin-bottom:16px;
@@ -29,6 +28,7 @@
     + .error-message{
       color:$red-20;
       font-size: 0.75em;
+      margin:3px 0 0 0;
     }
   }
 }
